@@ -1,3 +1,9 @@
+Tue Jul 10 23:01:00 2001  Corinna Vinschen <corinna@vinschen.de>
+
+	* mmap.cc (fhandler_disk_file::mmap): Try to open file mappings
+	by a unified name when running under 9x/ME. If that failes, create
+	the file mapping using the unified name.
+
 Mon Jul  9 10:43:00 2001  Corinna Vinschen <corinna@vinschen.de>
 
 	* uinfo.cc (internal_getlogin): Add pointer check.
